objects/CampaignRelationship__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>CampaignRelationships</relationshipLabel>
        <relationshipName>CampaignRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RelDateBecameClient__c</fullName>
        <formula>Relationship__r.DateBecameClient__c</formula>
        <label>RelDateBecameClient</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>CampaignRelationships</relationshipLabel>
        <relationshipName>CampaignRelationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>CampaignRelationship</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>CampaignRelationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CampaignRelationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>